new versiin idn config