@@ -1,6 +1,5 @@
 package com.pledge.backend.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -8,41 +7,34 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 public class CorsConfig {
-
-    @Value("${cors.allowed.origins:http://localhost:3000,https://godejewellers.in,https://www.godejewellers.in,https://pledge-master.vercel.app}")
-    private String allowedOrigins;
 
     @Bean
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Split by comma to allow multiple origins
-        List<String> origins = Arrays.asList(allowedOrigins.split(","));
-        origins.replaceAll(String::trim);
-        config.setAllowedOriginPatterns(origins);
-
-        // Allow credentials (cookies/JWT)
-        config.setAllowCredentials(true);
-
-        // Allow all necessary headers
-        config.setAllowedHeaders(List.of(
-                "Origin", "Content-Type", "Accept", "Authorization", "X-Requested-With"
+        // ✅ Allowed frontend origins
+        config.setAllowedOriginPatterns(Arrays.asList(
+                "https://www.godejewellers.in",
+                "https://godejewellers.in",
+                "https://pledge-master.vercel.app",
+                "http://localhost:3000"
         ));
 
-        // Allow HTTP methods
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // ✅ Allow credentials (for cookies or tokens)
+        config.setAllowCredentials(true);
 
-        // Expose headers to frontend
-        config.setExposedHeaders(List.of("Authorization", "Content-Disposition"));
+        // ✅ Allow all headers and methods
+        config.addAllowedHeader("*");
+        config.addAllowedMethod("*");
 
-        // Cache preflight response
-        config.setMaxAge(3600L);
+        // ✅ Expose key headers
+        config.addExposedHeader("Authorization");
+        config.addExposedHeader("Content-Disposition");
 
-        // Apply globally
+        // ✅ Apply to all routes
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
 
